--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "dependencies": {
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.15.12",
+    "@supabase/supabase-js": "^2.91.0",
     "framer-motion": "^12.25.0",
     "gsap": "^3.14.2",
     "lucide-react": "^0.562.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.1",
+    "react-router-dom": "^7.12.0",
     "three": "^0.161.0"
   },
   "devDependencies": {
